Fixed hero__paragraph overlapping on small width devices
Added media query to Work component so that it is consistent with Hero

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -49,12 +49,13 @@
         margin-right:1rem;
         width: 100vw;
         margin-left: 0;
+        font-size:12px;
     }
     .hero__paragraph{
         min-width:85%;
     }
     .hero__list{
-        width:40%;
+        width:80%;
     }
 }
 
